[package]
name = "abnana"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
prometheus-client = "0.24.0"
lazy_static = "1.5.0"
